# databricks-dab-examples

./: .gitignore  CODEOWNERS.txt  README.md
.github/workflows/: flights_liquibase.yml  flights_prd.yml  flights_stg.yml  flights_test.yml  flights_tst.yml
apps-lakebase-synced-table/: README.md  databricks.yml
flights-bundle-template/: README.md  databricks_template_schema.json
flights-bundle-template/template/: databricks.yml.tmpl  requirements.txt.tmpl
flights-bundle-template/template/resources/: flights_notebook_job.yml.tmpl  (+1 more)
flights-simple/: README.md  databricks.yml
flights-simple/src/: flights_main_dlt_sql.sql
flights/flights-advanced/: README.md  databricks.yml
flights/flights-bundle-template/: README.md  databricks_template_schema.json
flights/flights-liquibase/: databricks.yml  liquibase.properties  pyproject.toml  requirements.txt
flights/flights-liquibase/.github/workflows/: flights_liquibase.yml
flights/flights-liquibase/liquibase/: changelog.xml  changelog_test.yml  root.changelog.xml
flights/flights-liquibase/liquibase/changelogs/: changelog.xml
flights/flights-liquibase/tests/unit_transforms/: test_flight_transforms.py
flights/flights-liquibase/tests/unit_utils/: test_flight_utils.py
knowledge-base/app-react-lakebase/: README.md
knowledge-base/metric-views/: .gitignore  README.md  databricks.yml
my_app/dabs-cookbook-app/: databricks.yml
sts-dabs-demo/: databricks.yml
sts-dabs-demo/pipeline_example_by_provider/: azure-pipelines.yml
sts-dabs-demo/resources/: clusters.yml
uv_bundle/: README.md
(+34 files in other folders)
