[project]
name = "flights"
version = "0.0.1"
authors = [{"name" = "Databricks Field Eng"}]
description = "Flights project with Liquibase integration"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"flights" = "./src/flights"}
